src/tests/routes/crates/snapshots/all__routes__crates__downloads__downloads.snap
---
source: src/tests/routes/crates/downloads.rs
expression: json
---
{
  "version_downloads": [
    {
      "date": "[date]",
      "downloads": 1,
      "version": 1
    }
  ]
}
